# Fast-Typing

./: .gitignore  README.md  README.txt  build_and_run.sh  run.sh
src/: CMakeLists.txt  main.c
src/collections/: Words.c  Words.h
src/enumerations/: TrainingModes.h
src/extensions/data/: Statistics.c  Statistics.h
src/extensions/database/: Dictionary.c  Dictionary.h
src/extensions/signals/: Detach.c  Detach.h  SignalsDetach.c  SignalsDetach.h
src/extensions/statistics/: Statistics.c  Statistics.h
src/extensions/strings/: Compare.c  Compare.h
src/extensions/words/: Dictionary.c  Dictionary.h
src/resources/: Setup.glade  SetupViewUI.glade  Summary.glade  SummaryViewUI.glade  Training.glade  TrainingViewUI.glade  summary.glade
src/views/setup/: SetupUI.glade  SetupView.c  SetupView.glade  SetupView.h  SetupViewBehavior.h  SetupViewFunctionality.h  SetupViewVariables.h  SetupViewWidgets.h
src/views/summary/: SummaryUI.glade  SummaryView.c  SummaryView.glade  SummaryView.h  SummaryViewBehavior.h  SummaryViewFunctionality.h  SummaryViewVariables.h  SummaryViewWidgets.h
src/views/training/: TrainingUI.glade  TrainingView.c  TrainingView.h  TrainingViewBehavior.h  TrainingViewFunctionality.h  TrainingViewProperties.h  TrainingViewVariables.h  TrainingViewWidgets.h
